# itmo-homework

./: README.md
architecture/fifth_lab/ct-ca-backlog-24-mt-ea-petrov-main/: CMakeLists.txt  README.md  REPORT.md  hit.cpp  main.cpp  xor_shift_random.h
architecture/fifth_lab/ct-ca-backlog-24-mt-ea-petrov-main/assets/: about.md
architecture/fifth_lab/ct-ca-backlog-24-mt-ea-petrov-main/template_dont_edit/: REPORT.md
architecture/first_lab/ct-ca-backlog-24-fixed-point-ea-petrov-main/: README.md  main.py
architecture/fourth_lab/ct-ca-backlog-24-cache-isa-ea-petrov-main/: Cache.java  CellByte.java  CellTypo.java  Commands.java  LRU.java  Main.java  Maps.java  MemoryCell.java  PLRU.java  Parser.java  RAM.java  REPORT.md  rv32all.asm  rv32task.asm
architecture/second_lab/: main.py
architecture/third_lab/ct-ca-backlog-24-circuit-ea-petrov-main/: stack_behaviour.sv  stack_logical_normal.circ
paradigms/: README.md
paradigms/java-solutions/expression/: AbstractBinaryOperation.java  Add.java  AllExpressions.java  Const.java  GCD.java  GeomRectangle.java  GeomTriangle.java  LCM.java  Main.java  Negative.java  Square.java  Tetra.java  Variable.java
paradigms/java-solutions/queue/: AbstractQueue.java  ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  Queue.java  (+1 more)
paradigms/javascript-solutions/: example.js  functionalExpression.js
prog-intro/: README.md
prog-intro/java-solutions/: Reverse.java  ReverseSumAbs.java  Sum.java  SumLongPunct.java  WordStatInput.java  WordStatWordsSuffix.java  Wspp.java
prog-intro/qf-solutions/: A.java  B.java  I.java  J.java
(+70 files in other folders)
